PharmaDemo/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Accompanied_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accompanied Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <label>Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Best_Time__c</fullName>
        <label>Best Time</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallReportId__c</fullName>
        <label>CallReportId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <label>Call Notes</label>
        <picklist>
            <picklistValues>
                <fullName>Tolerability/Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comparative Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficacy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detail_Product_1__c</fullName>
        <label>Detail Product - 1</label>
        <picklist>
            <picklistValues>
                <fullName>Saledrin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saktrin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloxid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foredroid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloxycillin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detail_Product_2__c</fullName>
        <label>Detail Product - 2</label>
        <picklist>
            <picklistValues>
                <fullName>Saledrin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saktrin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloxid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foredroid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloxycillin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detail_Product_3__c</fullName>
        <label>Detail Product - 3</label>
        <picklist>
            <picklistValues>
                <fullName>Saledrin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saktrin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloxid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foredroid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloxycillin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detail_Product_Adoption_1__c</fullName>
        <label>Detail Product Adoption - 1</label>
        <picklist>
            <picklistValues>
                <fullName>Aware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Prescribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Prescribed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detail_Product_Adoption_2__c</fullName>
        <label>Detail Product Adoption - 2</label>
        <picklist>
            <picklistValues>
                <fullName>Aware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Prescribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Prescribed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detail_Product_Adoption_3__c</fullName>
        <label>Detail Product Adoption - 3</label>
        <picklist>
            <picklistValues>
                <fullName>Aware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Prescribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Prescribed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doctors_Seen__c</fullName>
        <label>Doctors Seen</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dropped_Material_Qty__c</fullName>
        <label>Dropped Material - Qty</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dropped_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dropped Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDT__c</fullName>
        <label>EndDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interactive_Material_Presented__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interactive Material Presented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Met_Doctor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Met Doctor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_call_Objective__c</fullName>
        <label>Next Call Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Discuss Efficacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide Comparative Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tolerability/Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comparative Data</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Id__c</fullName>
        <label>Related Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_1_Status__c</fullName>
        <label>Sample Status - 1</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Dropped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Dropped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Product_1_Lot__c</fullName>
        <label>Sample Product Lot - 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Product_1__c</fullName>
        <label>Sample Product - 1</label>
        <picklist>
            <picklistValues>
                <fullName>Saledrin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saktrin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloxid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foredroid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloxycillin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Product_2_Lot__c</fullName>
        <label>Sample Product Lot - 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Product_2__c</fullName>
        <label>Sample Product - 2</label>
        <picklist>
            <picklistValues>
                <fullName>Saledrin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saktrin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloxid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foredroid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloxycillin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Product_3_Lot__c</fullName>
        <label>Sample Product Lot - 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Product_3__c</fullName>
        <label>Sample Product - 3</label>
        <picklist>
            <picklistValues>
                <fullName>Saledrin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saktrin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloxid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foredroid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saloxycillin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Qty_1__c</fullName>
        <label>Sample Qty - 1</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Qty_2__c</fullName>
        <label>Sample Qty - 2</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Qty_3__c</fullName>
        <label>Sample Qty - 3</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Status_2__c</fullName>
        <label>Sample Status - 2</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Status_3__c</fullName>
        <label>Sample Status - 3</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDT__c</fullName>
        <label>StartDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <formula>StartDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaskTemplateId__c</fullName>
        <description>Lookup link to Task Template</description>
        <label>Task Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type1__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type2__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>IF( Subject = &quot;Appointment&quot;, HYPERLINK(&quot;/&quot; &amp;  Related_Id__c  , IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Dj0000001nzOo&amp;id=015j0000000e7fK&quot;,&quot;Appt&quot;),&quot;_parent&quot;), HYPERLINK(&quot;/&quot; &amp; Related_Id__c  , IMAGE(&quot;/servlet/servlet.ImageServer?oid=00Dj0000001nzOo&amp;id=015j0000000e7fL&quot;,&quot;Call Report&quot;),&quot;_parent&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_Status__c</fullName>
        <label>Visit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Met</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weekday__c</fullName>
        <formula>CASE(MOD(StartDate__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2,1, 3, 1, 4, 1, 5, 1, 6,1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wizard__c</fullName>
        <formula>HYPERLINK(&quot;https://sedemo.sparkstudiosaas.com//sparks//?loadSpaceID=315880cf0eaaa38j0000000Tzeh1282a4e2093-4dff&amp;loadSparkID=209722a80f51fc04dded35297cec12568836af0-77c6&amp;sessionID=&quot;&amp;$Api.Session_ID&amp;&quot;&amp;sessionURL=&quot;&amp;$Api.Partner_Server_URL_110&amp;&quot;&amp;vaContactId=&quot;&amp;WhoId &amp;&quot;&amp;VaCallReportID=&quot;&amp;Related_Id__c&amp;&quot;&amp;returnURL=/&quot;&amp;WhoId&amp;&quot;?isdtp=mn&quot;, IMAGE(&quot;/img/icon/campaigns16.gif&quot;,&quot;Call Report Wizard&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wizard</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AccompaniedCalls</fullName>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Accompanied_Call__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notEqual</operation>
            <value>Paster</value>
        </filters>
        <label>Accompanied Calls</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Visit_Made__c</columns>
        <columns>Dropped_Material__c</columns>
        <columns>Dropped_Material_Qty__c</columns>
        <columns>Interactive_Material_Presented__c</columns>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>